--- a/style.css
+++ b/style.css
@@ -30,3 +30,40 @@ body, html {
   display: inline-block;
   vertical-align: middle;
 }
+
+.level {
+  margin-bottom: 15px;
+}
+
+.easyLevel, .intermediateLevel, .difficultLevel {
+  display: inline-block;
+  margin-top: 0;
+  font-size: 20px;
+  color: white;
+  padding: 4px;
+  border-radius: 4px;
+}
+
+
+.easyLevel:hover, .intermediateLevel:hover, .difficultLevel:hover {
+  display: inline-block;
+  margin-top: 0;
+  font-size: 25px;
+  color: white;
+  padding: 5px;
+  border-radius: 4px;
+  cursor: pointer;
+
+}
+
+.easyLevel {
+  background-color: lime;
+}
+
+.intermediateLevel {
+   background-color: orange;
+}
+
+.difficultLevel {
+   background-color: red;
+}
